k8s/networkpolicy/networkpolicy-template.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: REPLACE_SERVICE_NAME-network-policy
  namespace: auto-service-system
spec:
  podSelector:
    matchLabels:
      app: REPLACE_SERVICE_NAME
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8080
